syntax = "proto3";

package pants.cache;

import "build/bazel/remote/execution/v2/remote_execution.proto";

enum CacheKeyType {
  PROCESS = 0;
  URL = 1;
  DEP_INFERENCE_REQUEST = 2;
}

// A tagged Digest to be used as a key in the local LMDB cache.
message CacheKey {
  CacheKeyType key_type = 1;

  build.bazel.remote.execution.v2.Digest digest = 2;
}

// A URL and Digest tuple, which is itself digested and used as a CacheKey. ObservedURLs
// collectively represent the set of digests that we have ever observed for a particular URL:
// their cache value is always empty.
message ObservedURL {
  string url = 1;
  build.bazel.remote.execution.v2.Digest observed_digest = 2;
}
